# Crooked-Moon-Monster-Harvesting

./: README.md  README_player.md  harvesting_items_by_item.html  harvesting_items_by_item.md  harvesting_items_by_monster.html  harvesting_items_by_monster.md  monster_drops_all_dm.csv
assets/: dm_screen.md  monster_drops_all_dm.csv  monster_drops_chapter_1_example.csv  sample_shop.csv  sample_smith_weapons.csv  to_do.csv
cards/: harvesting_items.html  sample_shop_cards.html  sample_smith_weapons_cards.html
example_handouts/: chapter1_drops.html  chapter1_drops_player_by_item.html  chapter1_drops_player_by_item.md
manual_generator/: README.md  pyproject.toml
manual_generator/css/: card.css  dnd.min.css  dnd_like.css  libre-baskerville.css  markdown.css
manual_generator/src/: generate_all.sh  generate_cards.py  generate_manuals.py  generate_markdown_by_item.py  generate_markdown_by_monster.py  generate_shop_cards.py  generate_shop_menus.py  markdown_to_manual.py
manual_generator/src/manual_generator/: csv_shop_menu_to_manual.py  harvesting_manual_generator.py  html_to_pdf.py  manual_generator.py  markdown_html.py  player_cards.py  shop_csv_to_manual.py
manuals/: dm_screen.html  harvesting_items_dm_by_item.html  harvesting_items_dm_by_item.md  harvesting_items_dm_by_monster.html  harvesting_items_dm_by_monster.md  harvesting_items_player_by_item.html  harvesting_items_player_by_item.md  harvesting_items_player_by_monster.html  harvesting_items_player_by_monster.md  sample_shop.html  sample_shop.md  sample_smith_weapons.html  sample_smith_weapons.md
